--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="row">
-    <div class="item last">Item 1</div>
-    <div class="item">Item 2</div>
+  <div layout="horizontal" layout-padding>
+    <div class="item">Item 1</div>
+    <div class="item" flex>Item 2</div>
     <div class="item">Item 3</div>
-    <div class="item">Item 4</div>
-    <div class="item">Item 5</div>
-    <div class="item">Item 6</div>
+  </div>
+  <div layout="vertical">
+    <div class="item" flex>Item 1</div>
+    <div class="item" flex>Item 2</div>
+    <div class="item" flex>Item 3</div>
   </div>
 </body>
 </html>
